# Early_Algo

./: CMakeLists.txt  README.md  main.cpp  script  tests.cpp
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/11/: index-sort-f.html  index-sort-l.html  index.html  new.func-sort-c.html  new.func.html  new.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html
coverage/11/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  cpp_type_traits.h.func-sort-c.html  cpp_type_traits.h.func.html  cpp_type_traits.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  move.h.func-sort-c.html  move.h.func.html  move.h.gcov.html  stl_algobase.h.func-sort-c.html  stl_algobase.h.func.html  stl_algobase.h.gcov.html  stl_construct.h.func-sort-c.html  stl_construct.h.func.html  stl_construct.h.gcov.html  stl_function.h.func-sort-c.html  stl_function.h.func.html  stl_function.h.gcov.html  stl_iterator.h.func-sort-c.html  stl_iterator.h.func.html  stl_iterator.h.gcov.html  stl_iterator_base_funcs.h.func-sort-c.html  stl_iterator_base_funcs.h.func.html  (+25 more)
cpp/: Grammar.cpp  Letter.cpp  Parser.cpp  Situation.cpp
hpp/: Grammar.hpp  Letter.hpp  Parser.hpp  Situation.hpp
(+63 files in other folders)
